feat: create delete lost pet functionality

--- a/src/i18n/locales/en/translation.json
+++ b/src/i18n/locales/en/translation.json
@@ -233,6 +233,7 @@
     "saving": "Saving...",
     "updateError": "Failed to update lost pet.",
     "updateSuccess": "Lost pet updated successfully!",
+    "deleteButton": "Delete",
     "errors": {
       "incorrectLanguagePetName": "Pet name contains invalid characters for the selected language.",
       "incorrectLanguageBreed": "Breed contains invalid characters for the selected language.",
