--- a/src/i18n/locales/ge/translation.json
+++ b/src/i18n/locales/ge/translation.json
@@ -207,7 +207,11 @@
       "locationRequired": "ადგილმდებარეობა აუცილებელია.",
       "mediaRequired": "ფოტოს ან ვიდეოს ატვირთვა აუცილებელია.",
       "submitFailed": "ფორმის გაგზავნა ვერ მოხერხდა. სცადეთ თავიდან."
-    }
+    },
+    "success": "წარმატება",
+    "successMessage": "დაკარგული ცხოველი წარმატებით დაემატა.",
+    "error": "შეცდომა",
+    "errorMessage": "დაკარგული ცხოველის დამატება ვერ მოხერხდა. გთხოვთ სცადოთ კვლავ."
   },
   "lostPetPage": {
     "title": "დაკარგული ცხოველები",
