chore: update translations for profile page

--- a/src/i18n/locales/en/translation.json
+++ b/src/i18n/locales/en/translation.json
@@ -37,6 +37,7 @@
   },
   "profile": {
     "viewProfile": "View Profile",
+    "profile": "Profile",
     "settings": "Settings",
     "logout": "Logout",
     "support": "Support"
