--- a/src/i18n/locales/ge/translation.json
+++ b/src/i18n/locales/ge/translation.json
@@ -37,6 +37,7 @@
   },
   "profile": {
     "viewProfile": "პროფილის ნახვა",
+    "profile": "პროფილი",
     "settings": "პარამეტრები",
     "logout": "გასვლა",
     "support": "დახმარება"
