chore: update translations

--- a/src/i18n/locales/en/translation.json
+++ b/src/i18n/locales/en/translation.json
@@ -230,6 +230,8 @@
     "description": "Description:",
     "location": "Location:",
     "aggressive": "Aggressive",
+    "isAggressive": "Yes",
+    "notAggressive": "No",
     "aggresiveDescription": "This pet is aggressive.",
     "status": "Status:",
     "editButton": "Edit",
