--- a/src/i18n/locales/ge/translation.json
+++ b/src/i18n/locales/ge/translation.json
@@ -231,6 +231,8 @@
     "description": "აღწერა:",
     "location": "ადგილმდებარეობა:",
     "aggressive": "აგრესიულია?",
+    "isAggressive": "კი",
+    "notAggressive": "არა",
     "aggresiveDescription": "ეს ცხოველი აგრესიულია.",
     "status": "სტატუსი:",
     "editButton": "რედაქტირება",
