chore: update translations and add user required message

--- a/src/i18n/locales/en/translation.json
+++ b/src/i18n/locales/en/translation.json
@@ -283,5 +283,9 @@
       "text": "Failed to upload the new pet images."
     },
     "uploadButton": "Upload Images"
+  },
+  "userIsRequired": {
+    "title": "User is required",
+    "text": "Please Login or SignUp."
   }
 }
