--- a/src/i18n/locales/ge/translation.json
+++ b/src/i18n/locales/ge/translation.json
@@ -284,5 +284,9 @@
       "text": "ახალი სურათების ატვირთვა ვერ მოხერხდა."
     },
     "uploadButton": "სურათის ატვირთვა"
+  },
+  "userIsRequired": {
+    "title": "მომხმარებელი აუცილებელია",
+    "text": "გთხოვთ გაიარეთ ავტორიზაცია ან რეგისტრაცია."
   }
 }
