--- a/src/i18n/locales/en/translation.json
+++ b/src/i18n/locales/en/translation.json
@@ -252,7 +252,15 @@
       "incorrectLanguageBreed": "Breed contains invalid characters for the selected language.",
       "incorrectLanguageDescription": "Description contains invalid characters for the selected language.",
       "incorrectLanguageLocation": "Location contains invalid characters for the selected language."
-    }
+    },
+    "confirmDeleteTitle": "Are you sure you want to delete this lost pet?",
+    "confirmDeleteText": "This action cannot be undone.",
+    "confirmDeleteButton": "Yes, delete it!",
+    "cancelDeleteButton": "Cancel",
+    "deleted": "Deleted!",
+    "deleteSuccessMessage": "The lost pet has been deleted successfully.",
+    "error": "Error!",
+    "deleteErrorMessage": "There was an error deleting the lost pet."
   },
   "lostPetImageModal": {
     "title": "All Images",
