chore: update translation

--- a/src/i18n/locales/ge/translation.json
+++ b/src/i18n/locales/ge/translation.json
@@ -67,7 +67,7 @@
   "about_us": {
     "introductionOverview": "მიმოხილვა",
     "missionStatement": "მისია",
-    "historyBackground": "ისტორია და ფონური ინფორმაცია",
+    "historyBackground": "ისტორია და ინფორმაცია",
     "foundingStory": "დამფუძნებლების ისტორია",
     "features": "მახასიათებლები",
     "howItWorks": "როგორ მუშაობს",
