chore: update translations

--- a/src/i18n/locales/en/translation.json
+++ b/src/i18n/locales/en/translation.json
@@ -218,7 +218,7 @@
     "addLostPetButton": "Add Lost Pet",
     "viewMoreImages": "View More Images",
     "viewMoreVideos": "View More Videos",
-    "noLostPetsFound": "No lost pets found.",
+    "noLostPetsFound": "No ads found.",
     "name": "Name:",
     "breed": "Breed:",
     "age": "Age:",
