--- a/src/i18n/locales/ge/translation.json
+++ b/src/i18n/locales/ge/translation.json
@@ -219,7 +219,7 @@
     "addLostPetButton": "დაამატე დაკარგული ცხოველი",
     "viewMoreImages": "მეტი სურათების ნახვა",
     "viewMoreVideos": "მეტი ვიდეოების ნახვა",
-    "noLostPetsFound": "დაკარგული ცხოველები ვერ მოიძებნა.",
+    "noLostPetsFound": "განცხადებები ვერ მოიძებნა.",
     "name": "სახელი:",
     "breed": "ჯიში:",
     "age": "ასაკი:",
