chore: add translations for street pet

--- a/src/i18n/locales/en/translation.json
+++ b/src/i18n/locales/en/translation.json
@@ -276,6 +276,10 @@
     "female": "Female",
     "lost": "Lost",
     "found": "Found",
+    "help": "Help",
+    "accountNumbers": "Organization Account Number:",
+    "addAccountNumber":"Add Account Number",
+    "giveaway": "Give Away",
     "description": "Description:",
     "location": "Location:",
     "aggressive": "Aggressive",
