--- a/src/i18n/locales/ge/translation.json
+++ b/src/i18n/locales/ge/translation.json
@@ -275,6 +275,10 @@
     "gender": "სქესი:",
     "lost": "დაკარგული",
     "found": "ნაპოვნი",
+    "help": "დახმარება",
+    "accountNumbers": "ორგანიზაციის ანგარიშის ნომერი:",
+    "addAccountNumber":"დამატეთ ანგარიში",
+    "giveaway": "გაჩუქება",
     "male": "ხვადი",
     "female": "ძუ",
     "description": "აღწერა:",
