--- a/src/i18n/locales/en/translation.json
+++ b/src/i18n/locales/en/translation.json
@@ -408,6 +408,39 @@
     },
     "uploadButton": "Upload Images"
   },
+  "streetPetVideoModal": {
+    "title": "All Videos",
+    "close": "Close",
+    "delete": "Delete",
+    "areYouSure": {
+      "title": "Are you sure?",
+      "text": "Do you really want to delete this video?",
+      "confirmButton": "Yes, delete it!",
+      "cancelButton": "Cancel"
+    },
+    "filenameError": "The filename is required.",
+    "deleteSuccessMessages": {
+      "title": "Deleted!",
+      "text": "The lost pet video has been deleted successfully.",
+      "confirmButton": "OK"
+    },
+    "deleteErrorMessages": {
+      "title": "Oops...",
+      "text": "Failed to delete the street pet video.",
+      "confirmButton": "OK"
+    },
+    "uploadSuccessMessages": {
+      "title": "Uploaded!",
+      "text": "The new pet videos have been uploaded successfully."
+    },
+    "uploadErrorMessages": {
+      "title": "Upload Failed",
+      "text": "Failed to upload the new pet videos."
+    },
+    "uploadButton": "Upload videos",
+    "newVideos": "New Videos",
+    "remove": "Remove"
+  },
   "streetPetModal": {
     "title": "Add Street Pet",
     "fields": {
