feat: modified the streetpet page to display the account numbers if they are available for a pet.

--- a/src/i18n/locales/en/translation.json
+++ b/src/i18n/locales/en/translation.json
@@ -298,7 +298,8 @@
       "userInfo": "User Information",
       "firstName": "First Name:",
       "lastName": "Last Name:",
-      "phoneNumber": "Phone:"
+      "phoneNumber": "Phone:",
+      "accountNumbers": "Account Numbers:"
     },
     "errors": {
       "incorrectLanguagePetName": "Pet name contains invalid characters for the selected language.",
