chore: add translations

--- a/src/i18n/locales/en/translation.json
+++ b/src/i18n/locales/en/translation.json
@@ -93,7 +93,9 @@
 
     "managePostsTitle": "Manage Posts",
     "managePostsDescription": "See all posts here.",
-    "managePostsButton": "Manage Posts"
+    "managePostsButton": "Manage Posts",
+    "streetPets":"Street Pets",
+    "lostPets":"Lost Pets"
   },
   "languageAlert": {
     "title": "Language Alert",
