chore: add translations

--- a/src/i18n/locales/en/translation.json
+++ b/src/i18n/locales/en/translation.json
@@ -510,9 +510,12 @@
     "description": "Description",
     "location": "Location",
     "media": "Media",
+    "actions":"Actions",
     "viewMedia": "View Media",
     "noStreetPetFound": "  No street pets available.",
     "delete":"Delete",
+    "readMore": "Read More",
+    "readLess": "Read Less",
 
 
 
