fix: correct georgian translation for delete error message

--- a/src/i18n/locales/ge/translation.json
+++ b/src/i18n/locales/ge/translation.json
@@ -557,7 +557,7 @@
     "deleted": "წაიშალა!",
     "deleteSuccessText": "ცხოველი წარმატებით წაიშალა.",
     "error": "შეცდომა!",
-    "deleteErrorText": "ცხოველის-ის წაშლაში მოხდა პრობლემა."
+    "deleteErrorText": "ცხოველისის წაშლისას მოხდა პრობლემა."
   },
   "lostPetMedia": {
     "mediaTitle": "{{petName}} - მედია",
